test/files/neg/typeerror.check
typeerror.scala:6: error: type mismatch;
 found   : Long(in method add)
 required: Long(in package scala)
    else add2(x.head, y.head) :: add(x.tail, y.tail)
                ^
one error found
